--- a/_posts/2024/2024-08-17-2104.12785.md
+++ b/_posts/2024/2024-08-17-2104.12785.md
@@ -1,14 +1,14 @@
 ---
 title:    Zhao Zheng, Liu Wenbiao, Fundamentals of General Relativity
-date:       2024-11-24
+date:      2024-11-24
 categories: [Physics,General Relativity]
-tag: [L
+tag: [Lecture Notes]
 toc: True
 description: These are the lecture notes I compiled while studying Foundations of General Relativity by Professor Zhao Zheng.
 math: True
 description: “Black holes are not dead stars, nor are they the final outcome of stellar evolution; rather, they are just one stage in the process of stellar evolution.”
 image: 
-    path: /assets/img/in-post/2024/zz.jpg
+    path: /assets/img/in-post/2024/zhao.jpg
 ---
 
 As an introductory book on General Relativity, Professor Zhao Zheng’s book is concise and comprehensive, covering almost all the essential topics in the field. The book has a relatively low entry barrier, making it accessible to second-year undergraduate students with a basic knowledge of multivariable calculus.
