--- a/_posts/2024/2024-08-16-weicheng.md
+++ b/_posts/2024/2024-08-16-weicheng.md
@@ -1,8 +1,8 @@
 ---
 title:      "Qian Zhongshu, Fortress Besieged"
 date:       2024-08-16
-categories: [Reading journal]
-tag: [Novel]
+categories: [Essay]
+tag: [Reading journal]
 math: true
 pin: false
 #media_subpath : /assets/img/in-post/2024/2024-08-16-weicheng/
