--- a/_posts/2025/2025-01-16-review.md
+++ b/_posts/2025/2025-01-16-review.md
@@ -6,7 +6,7 @@ tag: [Annual Summary]
 math: true
 pin: false
 #media_subpath : /assets/img/in-post/2024/2024-08-16-weicheng/
-description: “The year-end summary for 2024, covering aspects such as academics, life, and more.”
+description: The year-end summary for 2024, covering aspects such as academics, life, and more.
 image: 
     path: /assets/img/in-post/2025/summary.png
 ---
@@ -47,49 +47,49 @@ image:
     <div class="carousel-item active">
       <img src="/assets/img/in-post/2025/1.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <p>2024.3.13于南京浦口区</p>
+        <p>2024.3.13,于南京浦口区</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="/assets/img/in-post/2025/2.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <p>2024.3.28于杭州西湖风景区,品尝所谓扬州炒饭</p>
+        <p>2024.3.28,于杭州西湖风景区</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="/assets/img/in-post/2025/3.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <p>2024.6.14于南京浦口区白马生活广场海底捞,和本科舍友吃散伙饭</p>
+        <p>2024.6.14,于南京浦口区白马生活广场</p>
       </div>
     </div>
         <div class="carousel-item">
       <img src="/assets/img/in-post/2025/5.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <p>2024.6.14于南京浦口区白马生活广场海底捞,和本科舍友吃散伙饭</p>
+        <p>食堂一楼小碗菜</p>
       </div>
     </div>
         <div class="carousel-item">
       <img src="/assets/img/in-post/2025/6.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <p>2024.6.14于南京浦口区白马生活广场海底捞,和本科舍友吃散伙饭</p>
+        <p>2024.12.11,于杭州转塘街道霞鸣街</p>
       </div>
     </div>
         <div class="carousel-item">
       <img src="/assets/img/in-post/2025/7.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <p>2024.6.14于南京浦口区白马生活广场海底捞,和本科舍友吃散伙饭</p>
+        <p>食堂二楼小炒</p>
       </div>
     </div>
         <div class="carousel-item">
       <img src="/assets/img/in-post/2025/4.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <p>2024.6.14于南京浦口区白马生活广场海底捞,和本科舍友吃散伙饭</p>
+        <p>2024.6.14,于南京浦口区白马生活广场</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="/assets/img/in-post/2025/8.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>2024.10.3于南京高淳宝龙广场</h5>
+        <h5>2024.10.3,于南京高淳宝龙广场</h5>
       </div>
     </div>
     <!-- Additional items here -->
