--- a/_posts/2025/2025-01-16-review.md
+++ b/_posts/2025/2025-01-16-review.md
@@ -14,6 +14,7 @@ image:
 
 ## 学术
 
+### 课程学习
 
 2024年秋季学期,选修了理论物理专业课和公共课**9门,共计22学分,440学时**.中国科学院的课时安排不同于高校,可能是想让研究生尽快完成学业然后上手科研,一次课总共3个学时,**计3*50+20=170分钟**.尤其是在周一,上午有《群论》,下午有《广义相对论》,晚上还有《粒子物理基础》,一天有近9个小时都在上课.对于一个凝聚态出身、在本科毕业前没有任何高能基础的人来说,学业压力和同辈压力不可谓不大.好在最后基本上都坚持下来了,收获也特别大,用我之前在QQ动态上的话来说便是“**搞懂了很多内行人认为是极其trivial的常识问题**”.
 ![2024秋选课单](/assets/img/in-post/2025/summary.png)
@@ -28,6 +29,87 @@ image:
 
 《广义相对论》这门课总体而言是上课难、考试易,大纲基本上覆盖了梁书三册绝大部分内容,而考试很多都是概念简答题(比如能量条件有哪些,怎么理解等效原理,钱德拉塞卡极限是多少,暗能量占比是多少等等),甚至最基本的张量变换和克氏符的计算都没有考查,略显遗憾.无论如何,这门课确实是学到了东西,最后的总评也是满绩点(尽管并非高分),于我而言应该要觉得知足了吧.
 </details>
+
+### 会议报告
+
+
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/assets/img/in-post/2025/lzyz.jpg" class="d-block w-100 carousel-image" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <p>2024.3.13,于南京浦口区</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/img/in-post/2025/ll.jpg" class="d-block w-100 carousel-image" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <p>2024.3.28,于杭州西湖风景区</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/img/in-post/2025/hias.jpg" class="d-block w-100 carousel-image" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <p>2024.6.14,于南京浦口区白马生活广场</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/img/in-post/2025/5.jpg" class="d-block w-100 carousel-image" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <p>食堂一楼小碗菜</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/img/in-post/2025/xiaochao.jpg" class="d-block w-100 carousel-image" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <p>食堂二楼小炒</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/img/in-post/2025/4.jpg" class="d-block w-100 carousel-image" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <p>2024.10.3,于南京高淳宝龙广场</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/img/in-post/2025/1211.jpg" class="d-block w-100 carousel-image" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <p>2024.12.11,于杭州转塘街道霞鸣街</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/img/in-post/2025/8.jpg" class="d-block w-100 carousel-image" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <p>2025.1.4,于杭州转塘金街美地</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<style>
+  .carousel-image {
+    height: 400px; /* 固定高度 */
+    object-fit: cover; /* 保持图片比例并裁剪 */
+  }
+</style>
 
 ## 生活
 ### 食
@@ -45,54 +127,53 @@ image:
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/img/in-post/2025/1.jpg" class="d-block w-100" alt="...">
+      <img src="/assets/img/in-post/2025/1.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <p>2024.3.13,于南京浦口区</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2.jpg" class="d-block w-100" alt="...">
+      <img src="/assets/img/in-post/2025/2.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <p>2024.3.28,于杭州西湖风景区</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/3.jpg" class="d-block w-100" alt="...">
+      <img src="/assets/img/in-post/2025/3.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <p>2024.6.14,于南京浦口区白马生活广场</p>
       </div>
     </div>
-        <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/5.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-item">
+      <img src="/assets/img/in-post/2025/5.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <p>食堂一楼小碗菜</p>
       </div>
     </div>
-        <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/xiaochao.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-item">
+      <img src="/assets/img/in-post/2025/xiaochao.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <p>食堂二楼小炒</p>
       </div>
     </div>
-        <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/4.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-item">
+      <img src="/assets/img/in-post/2025/4.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>2024.10.3,于南京高淳宝龙广场</h5>
+        <p>2024.10.3,于南京高淳宝龙广场</p>
       </div>
     </div>
-           <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/1211.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-item">
+      <img src="/assets/img/in-post/2025/1211.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <p>2024.12.11,于杭州转塘街道霞鸣街</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/8.jpg" class="d-block w-100" alt="...">
+      <img src="/assets/img/in-post/2025/8.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>2025.1.4,于杭州转塘金街美地</h5>
+        <p>2025.1.4,于杭州转塘金街美地</p>
       </div>
     </div>
-    <!-- Additional items here -->
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -103,4 +184,12 @@ image:
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+<style>
+  .carousel-image {
+    height: 400px; /* 固定高度 */
+    object-fit: cover; /* 保持图片比例并裁剪 */
+  }
+</style>
+
 
