--- a/_posts/2025/2025-01-16-review.md
+++ b/_posts/2025/2025-01-16-review.md
@@ -8,7 +8,7 @@ pin: false
 #media_subpath : /assets/img/in-post/2024/2024-08-16-weicheng/
 description: The year-end summary for 2024, covering aspects such as academics, life, and more.
 image: 
-    path: /assets/img/in-post/2025/summary.png
+    path: /assets/img/in-post/2025/cover.jpg
 ---
 
 
@@ -64,19 +64,19 @@ image:
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/hias.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/ll.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <p>食堂一楼小碗菜</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/ll.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/cb.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <p>食堂二楼小炒</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/4.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/hias.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <p>2024.10.3,于南京高淳宝龙广场</p>
       </div>
