--- a/_posts/2025/2025-01-16-review.md
+++ b/_posts/2025/2025-01-16-review.md
@@ -42,7 +42,6 @@ image:
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -82,15 +81,9 @@ image:
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/1211.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/jz.png" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <p>2024.12.11,于杭州转塘街道霞鸣街</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/8.jpg" class="d-block w-100 carousel-image" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <p>2025.1.4,于杭州转塘金街美地</p>
       </div>
     </div>
   </div>
