--- a/_posts/2025/2025-01-16-review.md
+++ b/_posts/2025/2025-01-16-review.md
@@ -89,6 +89,22 @@ image:
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<details class="details-block" markdown="1">
+<summary>会议讲座情况</summary>
+
+- **学术会议**:由学院主办,邀请来自全国各个高校或者研究所的领域专家与会,会议期间会安排茶歇、晚宴等.2024年秋季学期总共举办了三场大型的学术会议:
+  - 10.25-29:杭州引力与宇宙学研讨会
+  - 12.27-29:空间引力波探测数据分析研讨会
+  - 12.30-31:第二届量子-宇宙物理年会
+  
+- **科学前沿讲座**:按照中国科学院理论物理研究所的培养方案,需要听满10次,共20学时.报告一般安排在每周二下午两点至四点,由理论所研究员(大多数情况下是这样,也有来自国家天文台和物理学院本部的老师)介绍相关领域的最新进展.
+- **HIAS讲堂**:由学校主办,通过与学科领域大家、人文艺术名家以及创新创业专家对话与交流,近距离感受大家风范,丰富专业知识,提高人文素养.
+- **HIAS Theory Scholar**:学院层面举办的以博士后为主的学术交流会议.
+
+</details>
+
+## 生活
+### 食
 
 <div id="carouselExampleCaptions2" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -167,6 +183,3 @@ image:
     object-fit: cover; /* 保持图片比例并裁剪 */
   }
 </style>
-
-
-
