--- a/_posts/2025/2025-01-16.md
+++ b/_posts/2025/2025-01-16.md
@@ -32,7 +32,6 @@ image:
 
 ### 会议报告
 
-
 <div id="carouselExampleCaptions1" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -183,3 +182,7 @@ image:
     object-fit: cover; /* 保持图片比例并裁剪 */
   }
 </style>
+
+### 游
+
+这学期
