--- a/_posts/2025/2025-01-16-review.md
+++ b/_posts/2025/2025-01-16-review.md
@@ -189,13 +189,4 @@ image:
 
 ### 游
 
-{%
-  include embed/video.html
-  src='/assets/img/in-post/2025/fcsjt.mp4'
-  types='ogg|mov'
-  poster='poster.png'
-  title='黄公望·《富春山居图》(剩山图)真迹'
-  autoplay=true
-  loop=true
-  muted=true
-%}
+![黄公望·《富春山居图》(剩山图)真迹](/assets/img/in-post/2025/fcsjt.mp4)
