--- a/_posts/2025/2025-01-16.md
+++ b/_posts/2025/2025-01-16.md
@@ -188,6 +188,7 @@ image:
 </style>
 
 ### 游
-- 游览杭州西湖风景区
-- 参观了浙江省博物馆
-![黄公望·《富春山居图》(剩山图)真迹](/assets/img/in-post/2025/fcsjt.mp4)
+- 打卡杭州西湖风景区
+- 打卡浙江省博物馆
+
+ - ![黄公望·《富春山居图》(剩山图)真迹](/assets/img/in-post/2025/fcsjt.mp4)
