--- a/_posts/2025/2025-01-18-typst.md
+++ b/_posts/2025/2025-01-18-typst.md
@@ -16,7 +16,7 @@ image:
 ## 为什么选择Typst?
 Typst相对于传统的排版工具$\LaTeX$具有如下优点:
 
-- **语法比$\LaTeX$简洁很多,很快就能上手**.不像$\LaTeX$大量使用反斜杠"\\"与花括号"\{\}",Typst的语法更为自然简洁.比如同样是输入行内分数2/3,$\LaTeX$语法为`$\frac{2}{3}$`或者`\dfrac{2}{3}`,而Typst的语法就是自然的`$2/3$`.对于行间公式,$\LaTeX$经常要用一对双美元符"$$",然而Typst只需要在一对单美元符&之间增加两个空格即可.例如对于场方程
+- **语法比$\LaTeX$简洁很多,很快就能上手**.不像$\LaTeX$大量使用反斜杠"\\"与花括号"\{\}",Typst的语法更为自然简洁.比如同样是输入行内分数$\frac{2}{3}$,$\LaTeX$语法为`$\frac{2}{3}$`或者`\dfrac{2}{3}`,而Typst的语法就是自然的`$2/3$`.对于行间公式,$\LaTeX$经常要用一对双美元符\$\$,然而Typst只需要在一对单美元符\$之间增加两个空格即可.例如对于场方程
 
 $$ G_{\mu\nu}=R_{\mu\nu}-\dfrac{1}{2}g_{\mu\nu}R=\dfrac{8\pi G}{c^4}T_{\mu\nu} $$ 
 
@@ -30,7 +30,7 @@ $ G_(mu nu)=R_(mu nu)-1/2 g_(mu nu) R=(8 pi G)/(c^4)T_(mu nu) $
 ```
 - **Typst渲染速度与Markdown相当,因此可以实时预览**,这正是$\LaTeX$的一大痛点.$\LaTeX$的编译速度受文档和图表大小影响,编译速度很慢,即使是开启自动编译也几乎无法像Markdown一样实时预览,而Typst采用一种增量编译算法和一种有约束的版面缓存方案,文档长度基本不会影响编译速度.
 - **Typst环境搭建比较简单**.可以使用官方的Web App(类似于$\LaTeX$的Overleaf)在线编辑,或者使用VS Code安装Tinymist Typst插件本地开发,而不必像$\LaTeX$一样在本地安装好几个G的Texlive.
--  **Typst是现代的编程语言**.Typst拥有变量、函数、包管理与错误检查等现代编程语言的特性,同时也提供了闭包等特性,便于进行函数式编程,包括了[标记模式]、\{脚本模式\}与\$数学模式\$等多种模式的作用域,并且它们可以不限深度地、交互地嵌套,并且通过包管理.
+-  **Typst是现代的编程语言**.Typst拥有变量、函数、包管理与错误检查等现代编程语言的特性,同时也提供了闭包等特性,便于进行函数式编程,包括了`[标记模式]`、`{脚本模式}`与`$数学模式$`等多种模式的作用域,并且它们可以不限深度地、交互地嵌套,并且通过包管理.
 
 
 
