--- a/_posts/2025/2025-01-18-typst.md
+++ b/_posts/2025/2025-01-18-typst.md
@@ -51,9 +51,28 @@ $ G_(mu nu)=R_(mu nu)-1/2 g_(mu nu) R=(8 pi G)/(c^4)T_(mu nu) $
 ![官方的webapp](/assets/img/in-post/2025/typst/3.png)
 
 ## $\LaTeX$用户快速入门
-### 创建文档
-### 章节标题与强调
-### 命令
+### 创建文档、章节标题与斜体、粗体以及列表
+如同$\LaTeX$创建`.tex`文件一样,Typst只需要创建一个`.typ`文件即可.默认使用A4纸张,而段落同样只需要空行.
+
+Typst使用`= 一级标题`、`== 二级标题`来输出标题,标题的深度取决于`=`的数量,这一点类似于Markdown的`# 一级标题`.此外,Typst使用`_ 斜体_`来表示斜体,使用`* 粗体 *`来表示粗体.
+
+对于无序列表,只需要在项目前面加上连字符`-`,如
+
+```Typst
+- First
+- Second
+- Third
+```
+有序列表在项目前面加上`+`,即
+```Typst
++ First
++ Second
++ Third
+```
+
+### 标记模式与代码模式
+### 模板与导入包
+### 数学公式输入
 ## 语法介绍
 
 
