--- a/_posts/2025/2025-01-16.md
+++ b/_posts/2025/2025-01-16.md
@@ -11,18 +11,28 @@ image:
     path: /assets/img/in-post/2025/coverr.jpg
 ---
 
-> 今年对我而言意义重大.
+> 2024年于我而言是意义尤为重大的一年.
 
 ## 寒假(1-2月)
 
-## 学术
+## 3月:复试
+
+## 4-5月
+
+## 6-8月
+
+## 9-11 月
+
+2024年秋季学期,选修了理论物理专业课和公共课**9门,共计22学分,440学时**.中国科学院的课时安排不同于高校,可能是想让研究生尽快完成学业然后上手科研,一次课总共3个学时,**计3*50+20=170分钟**.尤其是在周一,上午有《群论》,下午有《广义相对论》,晚上还有《粒子物理基础》,一天有近9个小时都在上课.对于一个凝聚态出身、在本科毕业前没有任何高能基础的人来说,学业压力和peer压力不可谓不大.好在最后基本上都坚持下来了,收获也特别大,用我之前在QQ动态上的话来说便是“**搞懂了很多内行人认为是极其trivial的常识问题**”.
+![2024秋选课单](/assets/img/in-post/2025/summary.png)
+<details class="details-block" markdown="1">
+
+
+
+## 12月
 
 ### 课程学习
 
-2024年秋季学期,选修了理论物理专业课和公共课**9门,共计22学分,440学时**.中国科学院的课时安排不同于高校,可能是想让研究生尽快完成学业然后上手科研,一次课总共3个学时,**计3*50+20=170分钟**.尤其是在周一,上午有《群论》,下午有《广义相对论》,晚上还有《粒子物理基础》,一天有近9个小时都在上课.对于一个凝聚态出身、在本科毕业前没有任何高能基础的人来说,学业压力和同辈压力不可谓不大.好在最后基本上都坚持下来了,收获也特别大,用我之前在QQ动态上的话来说便是“**搞懂了很多内行人认为是极其trivial的常识问题**”.
-![2024秋选课单](/assets/img/in-post/2025/summary.png)
-<details class="details-block" markdown="1">
-<summary>学习经历——以《广义相对论》为例</summary>
 
 </details>
 
