--- a/_posts/2025/2025-01-18-typst.md
+++ b/_posts/2025/2025-01-18-typst.md
@@ -1,7 +1,7 @@
 ---
-title:      "The Not So Short Introduction to Typst(to be continued)"
+title:      "The Not So Short Introduction to Typst(updating)"
 date:       2025-01-18
-categories: [Information Technology,Typst]
+categories: [Computer Science,Typst]
 tag: [Typst]
 math: true
 pin: false
@@ -16,7 +16,7 @@ image:
 ## 为什么选择Typst?
 Typst相对于传统的排版工具$\LaTeX$具有如下优点:
 
-- **语法比$\LaTeX$简洁很多,很快就能上手**.不像$\LaTeX$大量使用反斜杠"\\"与花括号"\{\}",Typst的语法更为自然简洁.比如同样是输入行内分数$\frac{2}{3}$,$\LaTeX$语法为`$\frac{2}{3}$`或者`\dfrac{2}{3}`,而Typst的语法就是自然的`$2/3$`.对于行间公式,$\LaTeX$经常要用一对双美元符\$\$,然而Typst只需要在一对单美元符\$之间增加两个空格即可.例如对于场方程
+- **语法比$\LaTeX$简洁很多,很快就能上手**.不像$\LaTeX$大量使用反斜杠"\\"与花括号"\{\}",Typst的语法更为自然简洁.比如同样是输入行内分数$\frac{2}{3}$,$\LaTeX$语法为`$\frac{2}{3}$`或者`$\dfrac{2}{3}$`,而Typst的语法就是自然的`$2/3$`.对于行间公式,$\LaTeX$经常要用一对双美元符\$\$,然而Typst只需要在一对单美元符\$之间增加两个空格即可.例如对于场方程
 
 $$ G_{\mu\nu}=R_{\mu\nu}-\dfrac{1}{2}g_{\mu\nu}R=\dfrac{8\pi G}{c^4}T_{\mu\nu} $$ 
 
