--- a/_posts/2025/2025-01-23-xAct.md
+++ b/_posts/2025/2025-01-23-xAct.md
@@ -1,5 +1,5 @@
 ---
-title:      "The Not So Short Introduction to xAct(to be continued)"
+title:      "The Not So Short Introduction to xAct (updating)"
 date:       2025-01-18
 categories: [Information Technology,Mathematica]
 tag: [xAct]
@@ -8,9 +8,9 @@ pin: false
 #media_subpath : /assets/img/in-post/2025/2025-01-18-weicheng/
 description: A Quick Start Guide to xACT, including its advantages, environment setup, and syntax.
 image: 
-    path: /assets/img/in-post/2025/typst/cover.png
+    path: /assets/img/in-post/2025/xAct/cover.png
 ---
-![alt text](image.png)
+
 ## 介绍
 
 xAct 是一套用于 Wolfram 语言中的张量计算代数的免费软件包。xAct 实现了用于快速操作指标的最先进算法，并且以当前的广义相对论几何方法为基础进行建模。它具有高度的可编程性和可配置性。自 2004 年 3 月首次公开发布以来，xAct 已经过了大量的测试，并且成功解决了广义相对论中的一些难题。
