--- a/_posts/2025/2025-01-31-review.md
+++ b/_posts/2025/2025-01-31-review.md
@@ -1,6 +1,6 @@
 ---
 title:      "Year-End Review for 2024"
-date:       2025-01-16
+date:       2025-01-31
 categories: [Essay]
 tag: [Annual Summary]
 math: true
@@ -8,28 +8,29 @@ pin: false
 #media_subpath : /assets/img/in-post/2024/2024-08-16-weicheng/
 description: The year-end summary for 2024, covering aspects such as academics, life, and more.
 image: 
-    path: /assets/img/in-post/2025/coverr.jpg
+    path: /assets/img/in-post/2025/2024/coverr.jpg
 ---
 
 > 2024年于我而言是意义尤为重大的一年.
 
-## 寒假(1-2月)
+## 1-2月(寒假)
 
 ## 3月:复试
 
 ## 4-5月:毕设
 
-4月3日左右拟录取后正式开始着手毕设,在师姐帮助和自己的摸索下很快熟练掌握了CST Studio Suite(虽然不出意外的话以后根本不会使用).软件模拟有了,之后每周一都去找导师讨论解析问题.导师人很好,每次去都用他休息的时间耐心解答我的问题,纠正我的误区.有几次更是和我一起熬夜推导公式,然后在线上讨论(我还跟他说过好几次让他早点休息哈哈).毕设总体进展很快,从着手做到论文初稿完成(5月4日),仅仅用了一个月的时间.之后导师又给我一个字一个字地面批了大概两三稿,从标点符号到公式、图表规范,一一悉心指导.后面闲聊的时候问我考的是什么专业,我说是理论物理,大概做粒子物理相关的.他说这一行文章不好发,还劝我博士阶段继续做表面等离极化激元——毕竟随便换个排列方式就是一篇文章.9月刚入学的时候,他还特意要了我的邮箱,想着让我挂一篇小论文的二作(文章用到我的一点工作).哎，如果有什么人是2024年甚至本科四年最值得回忆的,那一定是我的导师,遗憾的是毕业之后一直没什么机会再联系.
+4月3日左右拟录取后正式开始着手毕设——介电振子的散射谱和电磁耦合效应.在师姐的帮助和自己的摸索下很快熟练掌握了CST Studio Suite的使用方法,虽然不出意外的话以后不会再用.软件模拟有了,之后每周一都去找导师讨论如何解析求解.导师人很好,每次去都用他休息的时间耐心解答我的问题,纠正我的误区.有几次更是和我一起熬夜推导公式,然后在线上讨论(我还跟他说过好几次让他早点休息哈哈).毕设总体进展很快,从着手做到论文初稿完成(5月4日),仅仅用了一个月的时间.之后导师又给我一个字一个字地面批了大概两三稿,从标点符号到公式、图表规范,一一悉心指导.后面闲聊的时候问我考的是什么专业,我说是理论物理,大概做粒子物理相关的.他说这一行文章不好发,还劝我博士阶段继续做表面等离极化激元——毕竟这领域随便换个排列方式就能水一篇文章.9月刚入学的时候,他还特意要了我的邮箱,想着让我挂一篇小论文的二作(文章用到我的一点工作).哎，如果有什么人是2024年,甚至本科四年最值得回忆的,那一定是我的导师,遗憾的是毕业之后一直就没有什么机会再联系.
 
+![](/assets/img/in-post/2025/2024/hcp.png)
 ## 6-8月:暑假
 
-6月1日上午毕业论文答辩结束,意味着本科四年彻底结束了,蓦然有一种一直在忙突然可以停下来休息,却不知道做什么的无助感.
+6月1日上午毕业论文答辩结束,意味着本科四年彻底结束了,蓦然有一种一直在忙突然可以停下来休息,却又不知道做什么的无助感.
 
-暑假有些事要做,加上比较宅,没和其他同学一样,周游列省地旅游,基本在家待到7月末.后来有事又去云南待了大概十来天.回来后基本上就准备着开学了.学业方面也仅仅是看完了梁书上册前六章的内容,同时对即将的研究生生活充满了期待和焦虑.
+暑假自己有些事要做,加上比较宅,没和其他同学一样,周游列省地旅游,基本在家待到7月末.后来又去云南待了大概十来天.回来后基本上就准备着开学了.学业方面也仅仅是看完了梁书上册前六章的内容,同时对即将的研究生生活充满了期待和焦虑.
 
 ## 9-11月:上课
 
-2024年秋季学期,选修了理论物理专业课和公共课**9门,共计22学分,440学时**.中国科学院的课时安排不同于高校,可能是想让研究生尽快完成学业然后上手科研,一次课总共3个学时,**计3*50+20=170分钟**.尤其是在周一,上午有《群论》,下午有《广义相对论》,晚上还有《粒子物理基础》,一天有近9个小时都在上课.对于一个凝聚态出身、在本科毕业前没有任何高能基础的人来说,学业压力和peer压力不可谓不大.好在最后基本上都坚持下来了,收获很大,也明确了自己真正想做的大方向.用我之前在QQ动态上的话来说便是“**搞懂了很多内行人认为是极其trivial的常识问题**”.
+2024年秋季学期,选修了理论物理专业课和公共课**9门,共计22学分,440学时**.中国科学院的课时安排不同于高校,可能是想让研究生尽快完成学业然后上手科研,一次课总共3个学时,**计3*50+20=170分钟**.尤其是在周一,上午有《群论》,下午有《广义相对论》,晚上还有《粒子物理基础》,一天有近9个小时都在上课.对于一个凝聚态出身、在本科毕业前没有任何高能基础的人来说,学业和peer压力不可谓不大.好在最后基本上都坚持下来了,收获很大,也明确了自己真正想做的大方向.用我之前在QQ动态上的话来说便是“**搞懂了很多内行人认为是极其trivial的常识问题**”.
 ![2024秋选课单](/assets/img/in-post/2025/summary.png)
 
 - 9月9日举办了2024级研究生开学典礼.本来是要作为学院新生代表,上台参加佩戴校徽的环节.略显遗憾的是后面临时换人,错失了与王建宇院士合影的机会.22日,去浙江省博物馆看了黄公望《富春山居图》(剩山卷)真迹.排队将近1个多小时,观看却只有大概不到1分钟的时间.
