--- a/_posts/2025/2025-01-31-review.md
+++ b/_posts/2025/2025-01-31-review.md
@@ -13,11 +13,17 @@ image:
 
 > 2024年于我而言是意义尤为重大的一年.
 
-## 1-2月(寒假)
+## 1-2月:寒假
+
+寒假基本上在摆烂,在尚未出成绩前复试的内容一点都学不下去.好在国科大的复试内容大部分是面试,只有理论所本部等少数几个地方复试才会有笔试.2月26日下午大概2点半左右出的成绩,稍微有点出乎意料,印象中高数甲有好几个题写错或者没写,政治后面几个大题背的内容也没时间写上(倒大霉,整个南京市就只有我一个人考这里,结果被安排到坐在教室最后面,钟被日光灯管挡住一点都看不见).但无论如何总分在380+,进入复试乃至拟录取应该是没什么太大的问题,松了一口气后便开始准备四大力学.因为毕设做的就是电动力学相关,所以重点就在看电动力学,用的是刘川老师的书.量子力学稍微看了看之前应付初试整理的笔记,而热统看的则是大三时的抄书笔记.至于理论力学,想着不会问这么细致就没怎么复习.
 
 ## 3月:复试
 
-复试
+3月28日上午9点左右面试,有一个老师(应该是lxl)在我进去前还好心提醒要敲门.面试前半段时间交流还算好,大概问了问为什么没推免来这里,在这里认识哪些老师等等问题.到了后半段问专业课,就开始寄了——没问四大力学的内容,上来就是问对标准模型有什么了解.尬聊了几分钟后就都不说话了,好在计时员(wym老师)及时喊停,这才结束了面试.预料到复试成绩可能不会很好,但是无所谓,先去逛西湖,去断桥,去看苏小小,去岳王庙,去吃扬州炒饭……前所未有的放松和愉悦！
+
+<div style="text-align:center;">
+   <img src="/assets/img/in-post/2025/2024/18.Jpg" alt="图片描述" style="width:100%;"/>
+</div>
 
 ## 4-5月:毕设
 
@@ -25,13 +31,14 @@ image:
 
 <div style="text-align:center;">
   <img src="/assets/img/in-post/2025/2024/hcp.png" alt="图片描述" style="width:40%;"/>
+   <img src="/assets/img/in-post/2025/2024/17.png" alt="图片描述" style="width:50%;"/>
 </div>
 
 ## 6-8月:暑假
 
 6月1日上午毕业论文答辩结束,意味着本科四年彻底结束了,蓦然有一种一直在忙突然可以停下来休息,却又不知道做什么的无助感.
 
-暑假自己有些事要做,加上比较宅,没和其他同学一样,周游列省地旅游,基本在家待到7月末.后来又去云南待了大概十来天.回来后基本上就准备着开学了.学业方面也仅仅是看完了梁书上册前六章的内容,同时对即将的研究生生活充满了期待和焦虑.
+暑假自己有些事要做,加上比较宅,没和其他同学一样,周游列省地旅游,基本在家待到7月末.后来又去云南待了大概十来天.回来后基本上就准备着开学了.学业方面也仅仅是看完了梁书上册前六章的内容.期间收到了录取通知书,但没有开心几天便焦虑起即将到来的研究生生活.
 
 ## 9-11月:上课
 
@@ -40,7 +47,7 @@ image:
 ![2024秋选课单](/assets/img/in-post/2025/2024/summary.png)
 
 <div style="text-align:center;">
-  <img src="/assets/img/in-post/2025/2024/kcb.jpg" alt="图片描述" style="width:40%;"/>
+  <img src="/assets/img/in-post/2025/2024/kcb.jpg" alt="图片描述" style="width:30%;"/>
 </div>
 
 - 9月9日举办了2024级研究生开学典礼.本来是要作为学院新生代表,上台参加佩戴校徽的环节.略显遗憾的是后面临时换人,错失了与王建宇院士合影的机会.22日,去浙江省博物馆看了黄公望《富春山居图》(剩山卷)真迹.排队将近1个多小时,观看却只有大概不到1分钟的时间.
@@ -103,22 +110,16 @@ image:
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
 ## 12月:考试月
 
 12月大部分时间都在~~预习~~复习专业课,没怎么出去玩.
 
 
-### 课程学习
 
+## 其他
 
-</details>
-
-### 会议报告
-
-本学期认真听的报告并不多,一方面是时间不允许(如上所述,课程压力还是有的),另一方面则是因为还是喜欢自学,不太习惯在与他人的碰撞交流中取得进步.这一点务必要尽快纠正过来.
-
-<details class="details-block" markdown="1">
-<summary>会议讲座情况</summary>
+### 学术会议&讲座
 
 - **学术会议**:由学院主办,邀请来自全国各个高校或者研究所的领域专家与会,会议期间会安排茶歇、晚宴等.2024年秋季学期总共举办了三场大型的学术会议:
   - 10.25-29:杭州引力与宇宙学研讨会
@@ -129,13 +130,9 @@ image:
 - **HIAS讲堂**:由学校主办,通过与学科领域大家、人文艺术名家以及创新创业专家对话与交流,近距离感受大家风范,丰富专业知识,提高人文素养.
 - **HIAS Theory Scholar**:学院层面举办的以博士后为主的学术交流会议.
 
-</details>
-
-## 生活
-
 ### 食
 
-杭州的确是“美食荒漠”,不像南京一样有各种各样的特色小食(比如下图的虾).学校周围的小吃店(去过的)口味也比较一般,所以大部分情况下为了省事就在食堂吃.
+杭州不愧为“美食荒漠”,不像南京一样有各种各样的特色小食.学校周围的小吃店(去过的)口味也比较一般,所以大部分情况下为了省事就在食堂吃.
 食堂主要提供自选菜、小炒、面食以及麻辣拌等.自选菜口味一般,优点是很快,加上比较喜欢家常菜所以经常去吃.小炒分量很足,口味还行,但是去晚了要等很久.
 <div id="carouselExampleCaptions2" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -215,8 +212,5 @@ image:
   }
 </style>
 
-### 游
-- 打卡杭州西湖风景区
-- 打卡浙江省博物馆
 
- - ![黄公望·《富春山居图》(剩山图)真迹](/assets/img/in-post/2025/fcsjt.mp4)
+
