--- a/_posts/2025/2025-01-31-review.md
+++ b/_posts/2025/2025-01-31-review.md
@@ -11,7 +11,7 @@ image:
     path: /assets/img/in-post/2025/2024/coverr.jpg
 ---
 
-> 2024年于我而言是意义尤为重大的一年.
+> 2024年于我而言是意义尤为重大的一年.在更高的平台上,认识了很多新的朋友,也取得了很多的进步.
 
 ## 1-2月:寒假
 
@@ -21,7 +21,7 @@ image:
 
 3月28日上午9点左右面试,有一个老师(应该是lxl)在我进去前还好心提醒要敲门.面试前半段时间交流还算好,大概问了问为什么没推免来这里,在这里认识哪些老师等等问题.到了后半段问专业课,就开始寄了——没问四大力学的内容,上来就是问对标准模型有什么了解.尬聊了几分钟后就都不说话了,好在计时员(wym老师)及时喊停,这才结束了面试.预料到复试成绩可能不会很好,但是无所谓,先去逛西湖,去断桥,去看苏小小,去岳王庙,去吃扬州炒饭……前所未有的放松和愉悦！
 
-![西湖](/assets/img/in-post/2025/2024/21.Jpg)
+![西湖](/assets/img/in-post/2025/2024/18.jpg)
 
 
 ## 4-5月:毕设
@@ -29,7 +29,7 @@ image:
 4月3日左右拟录取后正式开始着手本科毕设——*介电振子的散射谱和电磁耦合效应*.在师姐的帮助和自己的摸索下很快熟练掌握了CST Studio Suite的使用方法,虽然不出意外的话以后不会再用.软件模拟有了,之后每周一都去找导师讨论如何解析求解.导师人很好,每次去都用他休息的时间耐心解答我的问题,纠正我的误区.有几次更是和我一起熬夜推导公式,然后在线上讨论(我还跟他说过好几次让他早点休息哈哈).毕设总体进展很快,从着手做到论文初稿完成(5月4日),仅仅用了一个月的时间.之后导师又给我一个字一个字地面批了大概两三稿,从标点符号到公式、图表规范,一一悉心指导.后面闲聊的时候问我考的是什么专业,我说是理论物理,大概做粒子物理相关的.他说这一行文章不好发,还劝我博士阶段继续做表面等离极化激元——毕竟这领域随便换个排列方式就能水一篇文章.9月刚入学的时候,他还特意要了我的邮箱,想着让我挂一篇小论文的二作(文章用到我的一点工作).哎，如果有什么人是2024年,甚至本科四年最值得回忆的,那一定是我的导师,遗憾的是毕业之后一直就没有什么机会再联系.
 
 <div style="text-align:center; display: flex; justify-content: center; align-items: center;">
-  <img src="/assets/img/in-post/2025/2024/hcp.png" alt="图片描述" style="width:40%; margin-right: 10px;"/>
+  <img src="/assets/img/in-post/2025/2024/hcp.png" alt="图片描述" style="width:50%; margin-right: 10px;"/>
   <img src="/assets/img/in-post/2025/2024/17.png" alt="图片描述" style="width:50%;"/>
 </div>
 
@@ -128,6 +128,7 @@ image:
 
 ### 学术会议&讲座
 
+这里的学术氛围超级浓厚,主要有以下这些:
 - **学术会议**:由学院主办,邀请来自全国各个高校或者研究所的领域专家与会,会议期间会安排茶歇、晚宴等.2024年秋季学期总共举办了三场大型的学术会议:
   - 10.25-29:杭州引力与宇宙学研讨会
   - 12.27-29:空间引力波探测数据分析研讨会
