--- a/_posts/2025/2025-01-31-review.md
+++ b/_posts/2025/2025-01-31-review.md
@@ -114,11 +114,13 @@ image:
 - 12.8,慕课英语考试,寄寄子/(ㄒoㄒ)/~~
 - 12.11,粒子物理基础考试.这门课平时作业比较多,但好在有现成答案,考试内容也比雁栖湖的简单很多,耿皇给分也超级好.一学期下来的收获主要是有以下两点:
   - 知道了一些常识,为学习量子场论建立起来了基本的图像.
-  - 让我彻底断了做粒子物理的念头.
+  - 让我彻底打消了做粒子物理的念头.
 -  12.17,群论考试.这门课前半部分何颂老师讲的很好,他往往能用一两句话就直戳要害,给你讲明白最核心和最本质的东西,自学过一遍群论之后再听可能收获会很大.后半部分张潘老师又基于Cayler图重构了一遍群论和表示论基础,后面又讲了循环群和(根本用不上的)点群.张潘老师每次课间休息结束总会到走廊上,喊一句“大家快回来,准备上课了啊”,真的是超级可爱.期末考试考的内容比较多,两个小时不大能写完,但不得不承认张潘老师很能奶分,出成绩后大家都很感恩他.
 -  12.24,高等量子力学考试.这门课唯一的价值就是给我学其他课程(GR,QFT)腾出来了时间.
 -  12.26,量子场论结课答辩.王青老师上课用的是温伯格的场论,对于初学者来说比较痛苦.于是我就去看了余钊焕老师的讲义和视频,把1-7章节大致过了一遍.写答辩论文的时候出了一个小意外:直到截止提交前一天,我才发现之前对于题目的理解出现了很大偏差,导致论文的后半部分不得不大修.于是将之前写好的都删了重写,然后再做汇报PPT.论文写完,Beamer做完已经是第二天的凌晨两三点了,再过六七个小时就要答辩,也顾不上排练一遍就赶紧睡了.答辩的时候有点紧张,内容也有点多,把所有东西讲完已经超时了,最后还是助教提了唯一一个问题,犹豫了会儿还是没回答上来.
-事实上,场论是这学期学的唯一一门比较失败的专业课.这也是意料之中,因为要优先学GR.好就好在最后的考核是答辩(给分还可以),而不是像雁栖湖一样闭卷考试.若是后者无疑又会寄寄子.
+事实上,场论是这学期学的唯一一门比较失败的专业课.这也是意料之中,因为要优先学GR.好就好在最后的考核是答辩(给分还可以),而不是像雁栖湖一样闭卷考试.若是后者无疑又会寄寄子.总结起来有两点:
+    - 做事一点都不能拖拉,今日事今日毕,不要总想着明日、后日……再做.
+    - 尽快要将场论补起来,将基础打好.
 
 -  12.31,广义相对论考试.评价参见[General Relativity (Fall 2024)](https://collapsar0615.github.io/posts/General-Relativity-(Fall-2024)/).
 
@@ -137,6 +139,9 @@ image:
 - **科学前沿讲座**:按照中国科学院理论物理研究所的培养方案,需要听满10次,共20学时.报告一般安排在每周二下午两点至四点,由理论所研究员(大多数情况下是这样,也有来自国家天文台和物理学院本部的老师)介绍相关领域的最新进展.
 - **HIAS讲堂**:由学校主办,通过与学科领域大家、人文艺术名家以及创新创业专家对话与交流,近距离感受大家风范,丰富专业知识,提高人文素养.
 - **HIAS Theory Scholar**:学院层面举办的以博士后为主的学术交流会议.
+
+因为时间关系,这学期大概只听了9场科学前沿讲座,
+![讲座](/assets/img/in-post/2025/2024/jz.png)
 
 ### 美食
 
