--- a/_posts/2025/2025-01-31-review.md
+++ b/_posts/2025/2025-01-31-review.md
@@ -140,7 +140,7 @@ image:
 - **HIAS讲堂**:由学校主办,通过与学科领域大家、人文艺术名家以及创新创业专家对话与交流,近距离感受大家风范,丰富专业知识,提高人文素养.
 - **HIAS Theory Scholar**:学院层面举办的以博士后为主的学术交流会议.
 
-因为时间关系,这学期大概只听了9场科学前沿讲座,
+因为时间关系,这学期大概只听了9场(有效的)科学前沿讲座.
 ![讲座](/assets/img/in-post/2025/2024/jz.png)
 
 ### 美食
