--- a/_posts/2025/2025-01-31-review.md
+++ b/_posts/2025/2025-01-31-review.md
@@ -1,54 +1,49 @@
 ---
 title:      "Year-End Review for 2024"
 date:       2025-01-31
-categories: [Essay,Annual Summary]
+categories: [Essay，Annual Summary]
 tag: [Annual Summary]
 math: true
 pin: false
 #media_subpath : /assets/img/in-post/2024/2024-08-16-weicheng/
-description: The year-end summary for 2024, covering aspects such as academics, life, and more.
+description: The year-end summary for 2024， covering aspects such as academics， life， and more。
 image: 
-    path: /assets/img/in-post/2025/2024/coverr.jpg
+    path: /assets/img/in-post/2025/2024/coverr。jpg
 ---
 
-> 2024年于我而言是意义尤为重大的一年.在更高的平台上,认识了很多新的朋友,也取得了很多的进步.
+> 2024年于我而言是意义尤为重大的一年。在更高的平台上，认识了很多新的朋友，也取得了很多的进步。
 
 ## 1-2月:寒假
 
-寒假基本上在摆烂,在尚未出成绩前复试的内容一点都学不下去.好在国科大的复试内容大部分是面试,只有理论所本部等少数几个地方复试才会有笔试.2月26日下午大概2点半左右出的成绩,稍微有点出乎意料,印象中高数甲有好几个题写错或者没写,政治后面几个大题背的内容也没时间写上(倒大霉,整个南京市就只有我一个人考这里,结果被安排到坐在教室最后面,钟被日光灯管挡住一点都看不见).但无论如何总分在380+,进入复试乃至拟录取应该是没什么太大的问题,松了一口气后便开始准备四大力学.因为毕设做的就是电动力学相关,所以重点就在看电动力学,用的是刘川老师的书.量子力学稍微看了看之前应付初试整理的笔记,而热统看的则是大三时的抄书笔记.至于理论力学,想着不会问这么细致就没怎么复习.
+2月26日下午大概2点半左右出的成绩，稍微有点出乎意料，印象中两门专业课并没有怎么发挥好，但无论如何总分在380+，进入复试乃至拟录取应该是没什么太大的问题，松了一口气后便开始准备复试。国科大的复试内容大部分是面试，只有理论所本部等少数几个地方复试才会有笔试。所以压力并不是特别大。因为毕设做的是电动力学相关，所以重点在看电动力学，用的是刘川老师的书。量子力学稍微看了看之前应付初试整理的笔记，而热统看的则是大三时的抄书笔记。至于理论力学，想着不会问这么细致就没怎么复习。
 
 ## 3月:复试
 
-3月28日上午9点左右面试,有一个老师(应该是lxl)在我进去前还好心提醒要敲门.面试前半段时间交流还算好,大概问了问为什么没推免来这里,在这里认识哪些老师等等问题.到了后半段问专业课,就开始寄了——没问四大力学的内容,上来就是问对标准模型有什么了解.尬聊了几分钟后就都不说话了,好在计时员(wym老师)及时喊停,这才结束了面试.预料到复试成绩可能不会很好,但是无所谓,先去逛西湖,去断桥,去看苏小小,去岳王庙,去吃扬州炒饭……前所未有的放松和愉悦！
+3月28日上午9点左右面试。应该是lxl老师，在我进去前还好心提醒要敲门。面试前半段时间交流还算好，大概问了问为什么没推免来这里，在这里认识哪些老师等等日常问题。到了后半段问专业课，就开始坐牢了——问对标准模型有什么了解，为什么正负电子对湮灭是产生两个光子而不是其他数目的光子。尬聊了几分钟后就都不说话了，好在计时员wym老师及时喊停，这才结束了面试。预料到复试成绩可能不会很好，但是无所谓，毕竟初试分数比较高。复试完就出去玩了，先去逛西湖，去断桥，去看苏小小，去岳王庙，去吃扬州炒饭……前所未有的放松和愉悦！
 
-![西湖](/assets/img/in-post/2025/2024/18.jpg)
+![西湖](/assets/img/in-post/2025/2024/18。jpg)
 
 
 ## 4-5月:毕设
 
-4月3日左右拟录取后正式开始着手本科毕设——*介电振子的散射谱和电磁耦合效应*.在师姐的帮助和自己的摸索下很快熟练掌握了CST Studio Suite的使用方法,虽然不出意外的话以后不会再用.软件模拟有了,之后每周一都去找导师讨论如何解析求解.导师人很好,每次去都用他休息的时间耐心解答我的问题,纠正我的误区.有几次更是和我一起熬夜推导公式,然后在线上讨论(我还跟他说过好几次让他早点休息哈哈).毕设总体进展很快,从着手做到论文初稿完成(5月4日),仅仅用了一个月的时间.之后导师又给我一个字一个字地面批了大概两三稿,从标点符号到公式、图表规范,一一悉心指导.后面闲聊的时候问我考的是什么专业,我说是理论物理,大概做粒子物理相关的.他说这一行文章不好发,还劝我博士阶段继续做表面等离极化激元——毕竟这领域随便换个排列方式就能水一篇文章.9月刚入学的时候,他还特意要了我的邮箱,想着让我挂一篇小论文的二作(文章用到我的一点工作).哎，如果有什么人是2024年,甚至本科四年最值得回忆的,那一定是我的毕设导师,遗憾的是毕业之后一直就没有什么机会再联系.
-
-<div style="text-align:center; display: flex; justify-content: center; align-items: center;">
-  <img src="/assets/img/in-post/2025/2024/hcp.png" alt="图片描述" style="width:70%; margin-right: 10px;"/>
-  <img src="/assets/img/in-post/2025/2024/17.png" alt="图片描述" style="width:80%;"/>
-</div>
+4月3日左右拟录取后正式开始着手本科毕设——*介电振子的散射谱和电磁耦合效应*。在师姐的帮助和自己的摸索下很快熟练掌握了CST Studio Suite的使用方法，虽然不出意外的话以后不会再用。在得到软件模拟的数值后，基本上每周一都去找导师讨论如何解析求解。导师人很好，我每次去他都利用休息时间耐心解答我的问题，纠正我的误区。甚至有几次更是和我一起熬夜推导公式，然后在线上讨论。毕设总体进展很快，从着手做到论文初稿完成(5月4日)，仅仅用了一个月的时间。之后导师又给我一个字一个字地面批了大概两三稿，从标点符号到公式、图表规范，一一悉心指导。后面闲聊的时候问我考的是什么专业，我说是理论物理，大概做粒子物理相关的（当然现在转到引力方向了）。他说这一方向文章不好发，还好心劝我博士阶段继续做表面等离极化激元——毕竟这领域随便换个微结构单元的排列方式就能出一篇文章。9月刚入学的时候，他还特意要了我的邮箱，想着让我挂一篇小论文的二作(因为文章用到我在本科时候的一点小工作)。哎，如果有什么人是2024年，甚至本科四年最值得回忆的，那一定是我的本科导师，遗憾的是毕业之后一直就没有什么机会再联系。
 
 ## 6-8月:暑假
 
-6月1日上午毕业论文答辩结束,意味着本科四年彻底结束了,蓦然有一种一直在忙突然可以停下来休息,却又不知道做什么的无助感.
+6月1日上午毕业论文答辩结束，意味着本科四年彻底结束了，蓦然有一种一直在忙突然可以停下来休息，却又不知道做什么的无助感。
 
-暑假自己有些事要做,加上比较宅,没和其他同学一样,周游列省地旅游,基本在家待到7月末.后来又去云南待了大概十来天.回来后基本上就准备着开学了.学业方面也仅仅是看完了梁书上册前六章的内容.期间收到了录取通知书,但没有开心几天便焦虑起即将到来的研究生生活.
+暑假自己有些事要做，加上比较宅，没和其他同学一样，周游列省地旅游，基本在家待到7月末。后来又去云南待了大概十来天。回来后基本上就准备着开学了。学业方面也仅仅是看完了梁书上册前六章的内容。期间收到了录取通知书，但没有开心几天便焦虑起即将到来的研究生生活。
 
 ## 9-11月:上课
 
-2024年秋季学期,选修了理论物理专业课和公共课**9门,共计22学分,440学时**.中国科学院的课时安排不同于高校,可能是想让研究生尽快完成学业然后上手科研,一次课总共3个学时,**计3*50+20=170分钟**.尤其是在周一,上午有《群论》,下午有《广义相对论》,晚上还有《粒子物理基础》,一天有近9个小时都在上课.对于一个凝聚态出身、在本科毕业前没有任何高能基础的人来说,学业和peer压力不可谓不大.好在最后基本上都坚持下来了,收获很大,也明确了自己真正想做的大方向.用我之前在QQ动态上的话来说便是“**搞懂了很多内行人认为是极其trivial的常识问题**”.
+2024年秋季学期，选修了理论物理专业课和公共课**9门，共计22学分，440学时**。中国科学院的课时安排不同于高校，可能是想让研究生尽快完成学业然后上手科研，一次课总共3个学时，**计3*50+20=170分钟**。尤其是在周一，上午有《群论》，下午有《广义相对论》，晚上还有《粒子物理基础》，一天有近9个小时都在上课。对于一个凝聚态出身、在本科毕业前没有任何高能基础的人来说，学业和peer压力不可谓不大。好在最后基本上都坚持下来了，收获很大，也明确了自己真正想做的大方向。用我之前在QQ动态上的话来说便是“**搞懂了很多内行人认为是极其trivial的常识问题**”。
 
-![2024秋选课单](/assets/img/in-post/2025/2024/summary.png)
+![2024秋选课单](/assets/img/in-post/2025/2024/summary。png)
 
 
-- 9月9日举办了2024级研究生开学典礼.本来是要作为学院新生代表,上台参加佩戴校徽的环节.略显遗憾的是后面临时换人,错失了与王建宇院士合影的机会.22日,去浙江省博物馆看了黄公望《富春山居图》(剩山卷)真迹.排队将近1个多小时,观看却只有大概不到1分钟的时间.
-- 10月15日,群论第一部分结课,向何颂老师要了签名(追星成功).19日,与10来个同学一起“喝酒”,认识了很多新朋友,并且和他们逐渐熟络起来.23日晚,参加HIAS讲堂举办的“中国-中东欧国家音乐院校联盟爵士大乐队音乐鉴赏课”,虽然不太能欣赏爵士乐,但玩的还是挺开心的.
-- 13日,粒子物理基础结课.19日,25日广义相对论结课,向李理老师和汤勇老师要了签名(追星成功+2).
+- 9月9日举办了2024级研究生开学典礼。本来是要作为学院新生代表，上台参加佩戴校徽的环节。略显遗憾的是后面临时换人，错失了与王建宇院士合影的机会。22日，去浙江省博物馆看了黄公望《富春山居图》(剩山卷)真迹。排队将近1个多小时，观看却只有大概不到1分钟的时间。
+- 10月15日，群论第一部分结课，向何颂老师要了签名(追星成功)。19日，与10来个同学一起“喝酒”，认识了很多新朋友，并且和他们逐渐熟络起来。23日晚，参加HIAS讲堂举办的“中国-中东欧国家音乐院校联盟爵士大乐队音乐鉴赏课”，虽然不太能欣赏爵士乐，但玩的还是挺开心的。
+- 13日，粒子物理基础结课。19日，25日广义相对论结课，向李理老师和汤勇老师要了签名(追星成功+2)。
 
 <div id="carouselExampleCaptions1" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -62,37 +57,37 @@ image:
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/img/in-post/2025/2024/14.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/2024/14。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2024/13.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/2024/13。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2024/11.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/2024/11。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2024/10.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/2024/10。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2024/9.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/2024/9。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2024/7.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/2024/7。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2024/16.png" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/2024/16。png" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
@@ -109,20 +104,20 @@ image:
 
 ## 12月:考试月
 
-12月大部分时间都在~~预习~~复习专业课,没怎么出去玩.现在按照考试时间顺序做一点总结:
+12月大部分时间都在~~预习~~复习专业课，没怎么出去玩。现在按照考试时间顺序做一点总结:
 
-- 12.8,慕课英语考试,寄寄子/(ㄒoㄒ)/~~
-- 12.11,粒子物理基础考试.这门课平时作业比较多,但好在有现成答案,考试内容也比雁栖湖的简单很多,耿皇给分也超级好.一学期下来的收获主要是有以下两点:
-  - 知道了一些常识,为学习量子场论建立起来了基本的图像.
-  - 让我彻底打消了做粒子物理的念头.
--  12.17,群论考试.这门课前半部分何颂老师讲的很好,他往往能用一两句话就直戳要害,给你讲明白最核心和最本质的东西,自学过一遍群论之后再听可能收获会很大.后半部分张潘老师又基于Cayler图重构了一遍群论和表示论基础,后面又讲了循环群和(根本用不上的)点群.张潘老师每次课间休息结束总会到走廊上,喊一句“大家快回来,准备上课了啊”,真的是超级可爱.期末考试考的内容比较多,两个小时不大能写完,但不得不承认张潘老师很能奶分,出成绩后大家都很感恩他.
--  12.24,高等量子力学考试.这门课唯一的价值就是给我学其他课程(GR,QFT)腾出来了时间.
--  12.26,量子场论结课答辩.王青老师上课用的是温伯格的场论,对于初学者来说比较痛苦.于是我就去看了余钊焕老师的讲义和视频,把1-7章节大致过了一遍.写答辩论文的时候出了一个小意外:直到截止提交前一天,我才发现之前对于题目的理解出现了很大偏差,导致论文的后半部分不得不大修.于是将之前写好的都删了重写,然后再做汇报PPT.论文写完,Beamer做完已经是第二天的凌晨两三点了,再过六七个小时就要答辩,也顾不上排练一遍就赶紧睡了.答辩的时候有点紧张,内容也有点多,把所有东西讲完已经超时了,最后还是助教提了唯一一个问题,犹豫了会儿还是没回答上来.
-事实上,场论是这学期学的唯一一门比较失败的专业课.这也是意料之中,因为要优先学GR.好就好在最后的考核是答辩(给分还可以),而不是像雁栖湖一样闭卷考试.若是后者无疑又会寄寄子.总结起来有两点:
-    - 做事一点都不能拖拉,今日事今日毕,不要总想着明日、后日……再做.
-    - 尽快要将场论补起来,将基础打好.
+- 12。8，慕课英语考试，寄寄子/(ㄒoㄒ)/~~
+- 12。11，粒子物理基础考试。这门课平时作业比较多，但好在有现成答案，考试内容也比雁栖湖的简单很多，耿皇给分也超级好。一学期下来的收获主要是有以下两点:
+  - 知道了一些常识，为学习量子场论建立起来了基本的图像。
+  - 让我彻底打消了做粒子物理的念头。
+-  12。17，群论考试。这门课前半部分何颂老师讲的很好，他往往能用一两句话就直戳要害，给你讲明白最核心和最本质的东西，自学过一遍群论之后再听可能收获会很大。后半部分张潘老师又基于Cayler图重构了一遍群论和表示论基础，后面又讲了循环群和(根本用不上的)点群。张潘老师每次课间休息结束总会到走廊上，喊一句“大家快回来，准备上课了啊”，真的是超级可爱。期末考试考的内容比较多，两个小时不大能写完，但不得不承认张潘老师很能奶分，出成绩后大家都很感恩他。
+-  12。24，高等量子力学考试。这门课唯一的价值就是给我学其他课程(GR，QFT)腾出来了时间。
+-  12。26，量子场论结课答辩。王青老师上课用的是温伯格的场论，对于初学者来说比较痛苦。于是我就去看了余钊焕老师的讲义和视频，把1-7章节大致过了一遍。写答辩论文的时候出了一个小意外:直到截止提交前一天，我才发现之前对于题目的理解出现了很大偏差，导致论文的后半部分不得不大修。于是将之前写好的都删了重写，然后再做汇报PPT。论文写完，Beamer做完已经是第二天的凌晨两三点了，再过六七个小时就要答辩，也顾不上排练一遍就赶紧睡了。答辩的时候有点紧张，内容也有点多，把所有东西讲完已经超时了，最后还是助教提了唯一一个问题，犹豫了会儿还是没回答上来。
+事实上，场论是这学期学的唯一一门比较失败的专业课。这也是意料之中，因为要优先学GR。好就好在最后的考核是答辩(给分还可以)，而不是像雁栖湖一样闭卷考试。若是后者无疑又会寄寄子。总结起来有两点:
+    - 做事一点都不能拖拉，今日事今日毕，不要总想着明日、后日……再做。
+    - 尽快要将场论补起来，将基础打好。
 
--  12.31,广义相对论考试.评价参见[General Relativity (Fall 2024)](https://collapsar0615.github.io/posts/General-Relativity-(Fall-2024)/).
+-  12。31，广义相对论考试。考试很简单。
 
 
 
@@ -130,23 +125,23 @@ image:
 
 ### 学术会议&讲座
 
-这里的学术氛围超级浓厚,主要有以下这些:
-- **学术会议**:由学院主办,邀请来自全国各个高校或者研究所的领域专家与会,会议期间会安排茶歇、晚宴等.2024年秋季学期总共举办了三场大型的学术会议:
-  - 10.25-29:杭州引力与宇宙学研讨会
-  - 12.27-29:空间引力波探测数据分析研讨会
-  - 12.30-31:第二届量子-宇宙物理年会
+这里的学术氛围超级浓厚，主要有以下这些:
+- **学术会议**:由学院主办，邀请来自全国各个高校或者研究所的领域专家与会，会议期间会安排茶歇、晚宴等。2024年秋季学期总共举办了三场大型的学术会议:
+  - 10。25-29:杭州引力与宇宙学研讨会
+  - 12。27-29:空间引力波探测数据分析研讨会
+  - 12。30-31:第二届量子-宇宙物理年会
   
-- **科学前沿讲座**:按照中国科学院理论物理研究所的培养方案,需要听满10次,共20学时.报告一般安排在每周二下午两点至四点,由理论所研究员(大多数情况下是这样,也有来自国家天文台和物理学院本部的老师)介绍相关领域的最新进展.
-- **HIAS讲堂**:由学校主办,通过与学科领域大家、人文艺术名家以及创新创业专家对话与交流,近距离感受大家风范,丰富专业知识,提高人文素养.
-- **HIAS Theory Scholar**:学院层面举办的以博士后为主的学术交流会议.
+- **科学前沿讲座**:按照中国科学院理论物理研究所的培养方案，需要听满10次，共20学时。报告一般安排在每周二下午两点至四点，由理论所研究员(大多数情况下是这样，也有来自国家天文台和物理学院本部的老师)介绍相关领域的最新进展。
+- **HIAS讲堂**:由学校主办，通过与学科领域大家、人文艺术名家以及创新创业专家对话与交流，近距离感受大家风范，丰富专业知识，提高人文素养。
+- **HIAS Theory Scholar**:学院层面举办的以博士后为主的学术交流会议。
 
-因为时间关系,这学期大概只听了9场(有效的)科学前沿讲座.
-![讲座](/assets/img/in-post/2025/2024/jz.png)
+因为时间关系，这学期大概只听了9场(有效的)科学前沿讲座。
+![讲座](/assets/img/in-post/2025/2024/jz。png)
 
 ### 美食
 
-杭州不愧为“美食荒漠”,不像南京一样有各种各样的特色小食.学校周围的小吃店(去过的)口味也比较一般,所以大部分情况下为了省事就在食堂吃.
-食堂主要提供自选菜、小炒、面食以及麻辣拌等.自选菜口味一般,优点是很快,加上比较喜欢家常菜所以经常去吃.小炒分量很足,口味还行,但是去晚了要等很久.
+杭州不愧为“美食荒漠”，不像南京一样有各种各样的特色小食。学校周围的小吃店(去过的)口味也比较一般，所以大部分情况下为了省事就在食堂吃。
+食堂主要提供自选菜、小炒、面食以及麻辣拌等。自选菜口味一般，优点是很快，加上比较喜欢家常菜所以经常去吃。小炒分量很足，口味还行，但是去晚了要等很久。
 <div id="carouselExampleCaptions2" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -160,51 +155,51 @@ image:
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/img/in-post/2025/1.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/1。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
-        <p>2024.3.13,于南京浦口区</p>
+        <p>2024。3。13，于南京浦口区</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/2。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
-        <p>2024.3.28,于杭州西湖风景区</p>
+        <p>2024。3。28，于杭州西湖风景区</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/3.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/3。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
-        <p>2024.6.14,于南京浦口区白马生活广场</p>
+        <p>2024。6。14，于南京浦口区白马生活广场</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/5.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/5。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>食堂一楼小碗菜</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/xiaochao.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/xiaochao。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>食堂二楼小炒</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/4.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/4。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
-        <p>2024.10.3,于南京高淳宝龙广场</p>
+        <p>2024。10。3，于南京高淳宝龙广场</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/1211.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/1211。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
-        <p>2024.12.11,于杭州转塘街道霞鸣街</p>
+        <p>2024。12。11，于杭州转塘街道霞鸣街</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/8.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="/assets/img/in-post/2025/8。jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
-        <p>2025.1.4,于杭州转塘金街美地</p>
+        <p>2025。1。4，于杭州转塘金街美地</p>
       </div>
     </div>
   </div>
@@ -219,7 +214,7 @@ image:
 </div>
 
 <style>
-  .carousel-image {
+  。carousel-image {
     height: 400px; /* 固定高度 */
     object-fit: cover; /* 保持图片比例并裁剪 */
   }
