--- a/_posts/2025/2025-01-31-review.md
+++ b/_posts/2025/2025-01-31-review.md
@@ -8,7 +8,7 @@ pin: false
 #media_subpath : /assets/img/in-post/2024/2024-08-16-weicheng/
 description: The year-end summary for 2024， covering aspects such as academics， life， and more。
 image: 
-    path: /assets/img/in-post/2025/2024/coverr。jpg
+    path: /assets/img/in-post/2025/2024/coverr.jpg
 ---
 
 > 2024年于我而言是意义尤为重大的一年。在更高的平台上，认识了很多新的朋友，也取得了很多的进步。
@@ -21,7 +21,7 @@ image:
 
 3月28日上午9点左右面试。应该是lxl老师，在我进去前还好心提醒要敲门。面试前半段时间交流还算好，大概问了问为什么没推免来这里，在这里认识哪些老师等等日常问题。到了后半段问专业课，就开始坐牢了——问对标准模型有什么了解，为什么正负电子对湮灭是产生两个光子而不是其他数目的光子。尬聊了几分钟后就都不说话了，好在计时员wym老师及时喊停，这才结束了面试。预料到复试成绩可能不会很好，但是无所谓，毕竟初试分数比较高。复试完就出去玩了，先去逛西湖，去断桥，去看苏小小，去岳王庙，去吃扬州炒饭……前所未有的放松和愉悦！
 
-![西湖](/assets/img/in-post/2025/2024/18。jpg)
+![西湖](/assets/img/in-post/2025/2024/18.jpg)
 
 
 ## 4-5月:毕设
@@ -57,32 +57,32 @@ image:
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/img/in-post/2025/2024/14。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/14.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2024/13。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/13.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2024/11。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/11.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2024/10。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/10.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2024/9。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/9.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2024/7。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/7.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
@@ -155,49 +155,49 @@ image:
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/img/in-post/2025/1。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/1.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>2024。3。13，于南京浦口区</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>2024。3。28，于杭州西湖风景区</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/3。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/3.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>2024。6。14，于南京浦口区白马生活广场</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/5。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/5.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>食堂一楼小碗菜</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/xiaochao。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/xiaochao.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>食堂二楼小炒</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/4。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/4.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>2024。10。3，于南京高淳宝龙广场</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/1211。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/1211.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>2024。12。11，于杭州转塘街道霞鸣街</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/8。jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/8.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>2025。1。4，于杭州转塘金街美地</p>
       </div>
